Summary of changes between versions 0.9.5 and 0.9.6
---------------------------------------------------

 - FILEIO was renamed to VDISK. BLOCKIO added to it, thanks to Ross S. W.
   Walker and Vu Pham.

 - Internal locking and execution context were reimplemnted. Particularly,
   implemented full support for SCSI task attributes (SIMPLE, ORDERED,
   etc.).

 - Updated to work on 2.6.20.x

 - Updated to work on 2.6.19.x, thanks to Ming Zhang.

 - Internal threads management reimplemented based on kthread*() API,
   thanks to Ming Zhang.

 - /proc implementation moved to seq_*() library, thanks to Ming Zhang.
   Target drivers need to be updated accordingly.

 - Building from the Linux kernel tree updated, inside kernel building fixed.

 - Support for CPU cache flushing before doing DMA to target devices added.

 - Various cleanups, bug fixes and improvements.

Summary of changes between versions 0.9.4 and 0.9.5
---------------------------------------------------

 - Fixed many found task management related problems, especially in the
   RESETs area. DEBUG_TM compilation option added (see README).

 - Updated to work on kernels version 2.6.18+.

 - FILEIO_ONLY added. If it's defined, there is no need to patch the
   kernel, but pass-through modules (scst_disk, scst_tape, etc.) are not
   supported).

 - Fixed problems with big amount of LUNs (500+).

 - Timer-based retries for targets after SCST_TGT_RES_QUEUE_FULL status
   implemented.

 - More intelligent IO flow control implemented.

 - Fixed broken CDROM FILEIO. Before that it always reported 
   "No medium found"

 - Data synchronization fixes and improvements in FILEIO. Added FUA
   support.

 - Fixed READ(6)/WRITE(6) CDB decoding for block devices.
   This bug prevented FreeBSD initiators from working.

 - Implemented sgv_pool. It is mempool-like interface, which caches
   built SG-vectors in order not to rebuild them again for every
   subsequent command, so saves performance price of building